--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv-page</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="header">
-        <h1>header</h1>
+        <div class="container">
+            <div class="header-row">
+                <img src="./img/photo.jpg"  srcset="./img/photo@2x.jpg 2x"alt="Photo" class="header-img">
+            </div>
+        </div>
     </header>
 
 
