--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,36 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
             <div class="header-row">
-                <img src="./img/photo.jpg"  srcset="./img/photo@2x.jpg 2x"alt="Photo" class="header-img">
+                <img src="./img/photo.jpg" srcset="./img/photo@2x.jpg 2x" alt="Photo" class="header-img">
+
+                <div class="header-desc">
+                    <h1 class="header-title">
+                        Magomed Akhmaev
+                    </h1>
+
+                    <p class="header-text">
+                        Frontend developer
+                    </p>
+
+                    <div class="header-btns">
+                        <a href="#" class="btn">Portfolio</a>
+                        <a href="$" class="btn-outline">Contacts</a>
+                    </div>
+
+
+                </div>
             </div>
+
+
         </div>
     </header>
 
 
 </body>
+
 </html>
