Added portfolio block and placeholder links that will be replaced with real projects in the future

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv-page</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -37,6 +37,39 @@
         </div>
     </header>
 
+    <main>
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="portfolio-title">Portfolio</h2>
+
+                <article class="projects">
+                    <div class="project">
+                        <a href="#!"><img src="img/portfolio/project-01.jpg" srcset="./img/portfolio/project-01@2x.jpg"
+                                alt="Furniture store website" class="project-img">
+                        </a>
+                        <h3 class="project-title"><a href="#!">Furniture store website</a></h3>
+                    </div>
+                    <div class="project">
+                        <a href="#!">
+                        <img src="img/portfolio/project-02.jpg"
+                            srcset="./img/portfolio/project-02@2x.jpg" alt="Travel agency website" class="project-img">
+                        </a>
+                        
+                        <h3 class="project-title"><a href="#!">Travel agency website</a></h3>
+                    </div>
+                    <div class="project">
+                        <a href="#!">
+                        <img src="img/portfolio/project-03.jpg"
+                            srcset="./img/portfolio/project-03@2x.jpg" alt="Residential complex website"
+                            class="project-img">
+                        </a>
+
+                        <h3 class="project-title"><a href="#!">Residential complex website</a></h3>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
 
 </body>
 
