--- a/index.html
+++ b/index.html
@@ -51,17 +51,16 @@
                     </div>
                     <div class="project">
                         <a href="#!">
-                        <img src="img/portfolio/project-02.jpg"
-                            srcset="./img/portfolio/project-02@2x.jpg" alt="Travel agency website" class="project-img">
+                            <img src="img/portfolio/project-02.jpg" srcset="./img/portfolio/project-02@2x.jpg"
+                                alt="Travel agency website" class="project-img">
                         </a>
-                        
+
                         <h3 class="project-title"><a href="#!">Travel agency website</a></h3>
                     </div>
                     <div class="project">
                         <a href="#!">
-                        <img src="img/portfolio/project-03.jpg"
-                            srcset="./img/portfolio/project-03@2x.jpg" alt="Residential complex website"
-                            class="project-img">
+                            <img src="img/portfolio/project-03.jpg" srcset="./img/portfolio/project-03@2x.jpg"
+                                alt="Residential complex website" class="project-img">
                         </a>
 
                         <h3 class="project-title"><a href="#!">Residential complex website</a></h3>
@@ -69,8 +68,36 @@
                 </article>
             </div>
         </section>
+
+        <section class="contacts">
+            <div class="container">
+                <h2 class="contacts-title">Contacts</h2>
+
+                <div class="messangers">
+                    <a href="#!" target="_blank" class="messanger">
+                        <img src="./img/icons/telegram.svg" alt="telegram">
+                        Write to Telegram</a>
+                    <a href="#!" target="_blank" class="messanger">
+                        <img src="./img/icons/whatsapp.svg" alt="whatsapp">
+                        Send to WhatsApp</a>
+                    <a href="#!" target="_blank" class="messanger">
+                        <img src="./img/icons/vk.svg" alt="VK">
+                        Contact on VK</a>
+                </div>
+            </div>
+
+        </section>
     </main>
 
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-inner">
+                <p> © Magomed Akhmaev </p>
+                <p>Frontend developer</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
