--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     </p>
 
                     <div class="header-btns">
-                        <a href="#" class="btn">Portfolio</a>
-                        <a href="$" class="btn-outline">Contacts</a>
+                        <a href="#portfolio" class="btn">Portfolio</a>
+                        <a href="#contacts" class="btn-outline">Contacts</a>
                     </div>
 
 
@@ -38,38 +38,38 @@
     </header>
 
     <main>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Portfolio</h2>
 
                 <article class="projects">
                     <div class="project">
-                        <a href="#!"><img src="img/portfolio/project-01.jpg" srcset="./img/portfolio/project-01@2x.jpg"
+                        <a href="./pages/panto.html"><img src="img/portfolio/project-01.jpg" srcset="./img/portfolio/project-01@2x.jpg"
                                 alt="Furniture store website" class="project-img">
                         </a>
-                        <h3 class="project-title"><a href="#!">Furniture store website</a></h3>
+                        <h3 class="project-title"><a href="./pages/panto.html">Furniture store website</a></h3>
                     </div>
                     <div class="project">
-                        <a href="#!">
+                        <a href="./pages/gotravel.html">
                             <img src="img/portfolio/project-02.jpg" srcset="./img/portfolio/project-02@2x.jpg"
                                 alt="Travel agency website" class="project-img">
                         </a>
 
-                        <h3 class="project-title"><a href="#!">Travel agency website</a></h3>
+                        <h3 class="project-title"><a href="./pages/gotravel.html">Travel agency website</a></h3>
                     </div>
                     <div class="project">
-                        <a href="#!">
+                        <a href="./pages/lofthouse.html">
                             <img src="img/portfolio/project-03.jpg" srcset="./img/portfolio/project-03@2x.jpg"
                                 alt="Residential complex website" class="project-img">
                         </a>
 
-                        <h3 class="project-title"><a href="#!">Residential complex website</a></h3>
+                        <h3 class="project-title"><a href="./pages/lofthouse.html">Residential complex website</a></h3>
                     </div>
                 </article>
             </div>
         </section>
 
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <div class="container">
                 <h2 class="contacts-title">Contacts</h2>
 
