Added video background for page header and optimized image size for faster page loading

--- a/pages/panto.html
+++ b/pages/panto.html
@@ -18,7 +18,7 @@
         <div class="container">
 
             <div class="inner-page-details">
-                <h1 class="inner-page-title">Furniture store website></h1>
+                <h1 class="inner-page-title">Furniture store website</h1>
 
                 <div class="inner-page-text">
                     <p>
