--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
 
         </div>
+
+        <video class="header-video" autoplay muted loop>
+            <source type="video/mp4" src="./video/2887463-hd_1280_720_25fps.mp4">
+        </video>
     </header>
 
     <main>
