--- a/pages/lofthouse.html
+++ b/pages/lofthouse.html
@@ -39,7 +39,7 @@
         </div>
 
         <img class="inner-page-img" src="../img/projects/project-lofthouse.jpg"
-            srcset="../img/projects/project-lofthouse@2x.jpg 2x" alt="Panto">
+            srcset="../img/projects/project-lofthouse@2x.jpg 2x" alt="lofthouse">
 
         <a href="../index.html" class="inner-page-backlink">
             <img src="../img/icons/arrow-left.svg" alt="Back to home">
